--- a/frontEnd/app/src/app/_shared/Header/Header.component.html
+++ b/frontEnd/app/src/app/_shared/Header/Header.component.html
@@ -1,36 +1,23 @@
 
-
-
-
 <nav class="navbar navbar-default navbar-static-top navbar-expand-lg bg-white">
   <div class="container-fluid">
     
     <a class="navbar-brand fs-2" routerLink="/">  <i style="color: #e5e900;"   class="fab fa-linkedin-in mx-1"></i>voice System </a>
-    <!-- <i class="fa-brands fa-meta"></i><i class="fa fa-h-square"></i> <i class="fa-brands fa-meta"></i> -->
+    
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
       <i class="fas fa-list"></i>
     </button>
-    <!-- if user logged out -->
+
     <div  class="collapse navbar-collapse" id="navbarScroll">
       <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
-     
         <li class="nav-item">
-          <a class="nav-link fs-5" routerLink="/invoice">Searsh for Invoice</a>
+          <a class="nav-link fs-5" routerLink="/invoice">Search for Invoice</a>
         </li>
         <li class="nav-item">
           <a class="nav-link fs-5" routerLink="/addinvoice">Add Invoice</a>
         </li>
-      </ul>
-      
-      <ul class="navbar-nav  justify-content-end my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
-        <li class="nav-item">
-          <a class="fs-5 nav-link" routerLink="/patientRegister">Register</a>
-        </li>
-      
-      </ul>      
+      </ul>    
     </div>
-
-
 
   </div>
 </nav>
