--- a/frontEnd/app/src/app/invoice/add-invoice/add-invoice.component.html
+++ b/frontEnd/app/src/app/invoice/add-invoice/add-invoice.component.html
@@ -1,1 +1,172 @@
-<p>add-invoice works!</p>
+
+
+<div class="container" style="text-align: right">
+
+    <form  name="form" (ngSubmit)="onSubmit(MyForm)" #MyForm="ngForm" *ngIf="!showResult" >
+
+      <!-- Clinet -->
+      <div class="form-group row my-4">
+        <div class="col-lg-6 col-sm-1"></div>
+        <div class="col-lg-3 col-sm-5">
+            <input  type="client"  
+            class="form-control form-control-lg " 
+            name="client"
+            [(ngModel)]="invoice.clientName" 
+            placeholder ="Enter client name" required #client="ngModel"/>
+            <div class="alert alert-danger fs-5" role="alert" *ngIf="client.errors && MyForm.submitted && onSubmitError" >
+              <div *ngIf="client.errors['required']">client is required</div>
+            </div>
+        </div>
+          <div class="col-lg-3 col-sm-5">
+              <label for="client" class="fs-5">اسم العميل</label>
+          </div>
+      </div>
+     
+      <hr>
+        <!-- item name -->
+      <div class="row my-2 fs-5 form-group">
+        <div class="col-lg-6 col-sm-1"></div>
+        <div class="col-lg-3 col-sm-5 ">
+            <input id="itemName"  class="form-control form-control-lg " id="id" type="text" [ngModelOptions]="{standalone: true}" [(ngModel)]="item.itemName" placeholder="Enter item name " >
+            <!-- <div *ngIf="showError" role="alert" class="alert alert-danger fs-5 my-2" style="text-align: left">
+                {{errorMessage}}
+            </div> -->
+         
+        </div>
+        <div class="col-lg-3 col-sm-5">
+            <label for="itemName"> اسم الصنف </label>
+        </div>
+    </div>
+        <!-- price -->
+
+    <div class="row my-2 fs-5 form-group">
+        <div class="col-lg-6 col-sm-1"></div>
+        <div class="col-lg-3 col-sm-5">
+            <input id="price"  class="form-control form-control-lg " [ngModelOptions]="{standalone: true}" [pattern]="isNumberPattern"  type="text" [(ngModel)]="item.price" placeholder="Enter price" >
+            <!-- <div *ngIf="showError" role="alert" class="alert alert-danger fs-5 my-2" style="text-align: left">
+                {{errorMessage}}
+            </div> -->
+        </div>
+        <div class="col-lg-3 col-sm-5">
+            <label for="price"> سعر القطعه  </label>
+        </div>
+    </div>
+
+        <!-- quantity -->
+    <div class="row my-2 fs-5 form-group">
+        <div class="col-lg-6 col-sm-1"></div>
+        <div class="col-lg-3 col-sm-5">
+            <input   class="form-control form-control-lg " id="quantity" 
+                    [ngModelOptions]="{standalone: true}" [pattern]="isNumberPattern"  
+                    type="text" [(ngModel)]="item.quantity" placeholder="Enter quantity " >
+            <!-- <div *ngIf="showError" role="alert" class="alert alert-danger fs-5 my-2" style="text-align: left">
+                {{errorMessage}}
+            </div> -->
+        </div>
+        <div class="col-lg-3 col-sm-5">
+            <label for="quantity"> الكميه </label>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-lg-6"></div>
+        <div class="col-lg-3 fs-5 mt-3">
+            <button (click)="AddItem()" class="btn fs-5 btn-outline-warning form-control form-control-lg " >Add item into invoice </button>
+            <div *ngIf="showError">
+                <div class=" alert alert-danger fs-5 my-2" role="alert">
+                    {{errorMessage}}
+                </div>
+            </div>
+        </div>
+
+    </div>
+    
+
+      <hr>
+        <div class="row my-5 fs-5 " *ngIf="invoiceDetails.length!=0" >
+           <table class="table table-striped table-inverse table-responsive">
+            <thead class="thead-inverse">
+                <tr>
+                    <th>الاجمالي </th>
+                    <th>الكميه </th>
+                    <th>سعر القطعه </th>
+                    <th>الصنف</th>
+                </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let i of invoiceDetails" >
+                        <td scope="row">{{i.total }}</td>
+                        <td scope="row">{{i.quantity}}</td>
+                        <td scope="row">{{i.price}}</td>
+                        <td scope="row">{{i.itemName}}</td>
+                    </tr>
+                </tbody>
+           </table>
+        </div>
+
+        <div class="form-group col-lg-12 d-grid my-3"   >
+            <button class="btn btn-warning btn-lg" (click)="fireSubmission()" > Add Invoice </button>
+        </div>
+      
+        <div class="form-group form-control-lg">
+          <div
+          class="alert alert-danger form-control-lg"
+          role="alert" 
+          *ngIf="MyForm.submitted && onSubmitError && invoiceDetails.length==0"
+          >
+                Missing Fields required or invalid values 
+        </div>
+      </div>
+    </form>
+
+  
+
+    
+    <div *ngIf="showResult" class="fs-5">
+     <hr>
+       
+     <div class="row my-2 fs-5"  >
+        <div class="col-lg-8"></div>
+        <div class="col-lg-4 ">
+               {{invoice.invoiceId}}
+               <label > : رقم الفاتوره </label>
+        </div>
+    </div>
+
+        <div class="row my-2 fs-5 "  >
+            <div class="col-lg-8"></div>
+            <div class="col-lg-4 ">
+                   {{invoice.date|date:'short'}}
+                   <label > : التاريخ </label>
+            </div>
+           
+        </div>
+
+        <div class="row myt-5 fs-5 "  >
+            <div class="col-lg-8"></div>
+            <div class="col-lg-4">
+                {{invoice.totalPrice |currency: " EGP ":"symbol"}}
+                <label > :اجمالي الفاتوره</label>
+                <!-- <input class="form-control form-control-lg " type="text"  [(ngModel)]="invoice.totalPrice" > -->
+            </div>
+        </div>
+
+        <div class="row my-2 fs-5 "  >
+            <div class="col-lg-8"></div>
+            <div class="col-lg-4">
+                {{invoice.itemsCount}}
+                <label >:   عدد الاصناف </label>
+                <!-- <input class="form-control form-control-lg " type="text"  [(ngModel)]="invoice.itemsCount" > -->
+            </div>
+        </div>
+        
+        <div class="row my-2 fs-5 "  >
+            <div class="col-lg-8"></div>
+            <div class="col-lg-4">
+            <button class="btn btn-warning btn-lg" (click)="AddNewInvoice()" > Add New Invoice </button>
+            </div>
+        </div>
+    </div>
+</div>
+
+   
