--- a/frontEnd/app/src/app/invoice/get-invoice/get-invoice.component.html
+++ b/frontEnd/app/src/app/invoice/get-invoice/get-invoice.component.html
@@ -2,64 +2,61 @@
 
 <div class="container" style="text-align: right">
     <div class="row my-5 fs-5 form-group">
-        <div class="col-lg-3 ">
+        <div class="col-lg-3 col-sm-3 ">
             <button (click)="ShowInvoiceDetails()" class="form-control form-control-lg " >search </button>
         </div>
-        <div class="col-lg-3"></div>
-        <div class="col-lg-3 ">
+        <div class="col-lg-3 col-sm-1 "></div>
+        <div class="col-lg-3 col-sm-5 ">
             <input   class="form-control form-control-lg " id="id" [pattern]="IdPattern"  type="text" [(ngModel)]="id" placeholder="Enter Invoice Id" >
             <div *ngIf="showError" role="alert" class="alert alert-danger fs-5 my-2" style="text-align: left">
                 {{errorMessage}}
             </div>
-            <!-- <div class="alert alert-danger fs-5" role="alert" *ngIf="id.errors && MyForm.submitted" >
-                <div *ngIf="id.errors['required']">email is required</div>
-                <div *ngIf="id.errors['pattern']">email is invalid !</div>
-            </div> -->
+         
         </div>
-        <div class="col-lg-3">
+        <div class="col-lg-3 col-sm-3 ">
             <label for="id"> رقم الحركه </label>
         </div>
     </div>
     
     <div *ngIf="showResult">
      <hr>
-        <div class="row my-2 fs-5 "  >
-            <div class="col-lg-3">
+        <div class="row my-2 fs-5  "  >
+            <div class="col-lg-3 col-sm-3 ">
                 <button class="form-control form-control-lg btn btn-outline-danger" (click)="clearData()" >Clear </button>
             </div>
 
-            <div class="col-lg-3"></div>
-            <div class="col-lg-3 ">
+            <div class="col-lg-3 col-sm-1 "></div>
+            <div class="col-lg-3 col-sm-5  ">
                 <label class="form-control form-control-lg "> {{invoice.invoiceId }} </label>
                 <!-- <input class="form-control form-control-lg " type="text" disabled="true" [(ngModel)]="invoice.invoiceId" > -->
             </div>
-            <div class="col-lg-3">
+            <div class="col-lg-3 col-sm-3 ">
                 <label for="id">رقم الحركه </label>
             </div>
         </div>
         <div class="row my-2 fs-5 "  >
-            <div class="col-lg-3 ">
+            <div class="col-lg-3 col-sm-3  ">
                 <p-confirmDialog header="Confirmation to delete invoice" icon="pi pi-exclamation-triangle" [style]="{width: '50vw'}" [baseZIndex]="10000" rejectButtonStyleClass="p-button-outlined"></p-confirmDialog>
                 <p-button  styleClass="p-button-danger" (click)="confirm()"  icon="pi pi-times" label="Delete"></p-button>
                 <!-- <button class="form-control form-control-lg btn btn-outline-danger" (click)="Delete()" >Clear </button> -->
             </div>
-            <div class="col-lg-3"></div>
-            <div class="col-lg-3 ">
+            <div class="col-lg-3 col-sm-1 "></div>
+            <div class="col-lg-3 col-sm-5 ">
                 <label class="form-control form-control-lg "> {{invoice.clientName }} </label>
                 <!-- <input class="form-control form-control-lg " type="text"  [(ngModel)]="invoice.clientName" > -->
             </div>
-            <div class="col-lg-3">
+            <div class="col-lg-3 col-sm-3 ">
                 <label > اسم العميل </label>
             </div>
         </div>
         <div class="row my-2 fs-5 "  >
-            <div class="col-lg-6"></div>
-            <div class="col-lg-3 ">
+            <div class="col-lg-6 col-sm-4 "></div>
+            <div class="col-lg-3 col-sm-5 ">
                <div  *ngIf="!hideDate">
                    {{invoice.date|date:'short'}}
                 </div>
             </div>
-            <div class="col-lg-3">
+            <div class="col-lg-3 col-sm-3">
                 <label > التاريخ </label>
             </div>
         </div>
@@ -107,45 +104,4 @@
     </div>
 </div>
 
-    <!--
-<div class="container my-5" >
-    <div class="shadow-4 rounded-5 overflow-hidden">
-        <table class="table align-middle mb-0 bg-white">
-            <thead class="bg-light" >
-          <tr>
-            <th>Invoice id</th>
-            <th>Client name </th>
-            <th>Date</th>
-          
-          </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let i of invoiceDetails" >
-                 <td>
-              <p class="text-muted mb-0">{{i.didNavigation?.fname}} {{i.didNavigation?.lname}}</p>
-            </td>
-            
-            <td>
-              <p class="text-muted mb-0">{{i.file_description}}</p>
-            </td>
-            <td>
-              <p class="text-muted mb-0">{{i.attached_files}}</p> 
-            </td>
-            <td>
-             
-              <p class="text-muted mb-0">{{i.date|date:'shortDate'}}</p>  
-            </td>
-            <td>
-              <p class="text-muted mb-0">{{i.summary}}</p>  
-            </td> 
-        </tr>
-    </tbody>
-  
-</table>
-</div>
-
-</div>
-
--->
-  
-  
+   
