--- a/frontEnd/app/src/app/invoice/get-invoice/get-invoice.component.html
+++ b/frontEnd/app/src/app/invoice/get-invoice/get-invoice.component.html
@@ -7,7 +7,7 @@
         </div>
         <div class="col-lg-3 col-sm-1 "></div>
         <div class="col-lg-3 col-sm-5 ">
-            <input   class="form-control form-control-lg"  id="id" [pattern]="IdPattern"  type="text" [(ngModel)]="id" placeholder="Enter Invoice Id" >
+            <input   class="form-control form-control-lg"  id="id" [pattern]="IsNumberPattern"  type="text" [(ngModel)]="id" placeholder="Enter Invoice Id" >
             <div *ngIf="showError" role="alert" class="alert alert-danger fs-5 my-2" style="text-align: left">
                 {{errorMessage}}
             </div>
@@ -18,7 +18,7 @@
         </div>
     </div>
     
-    <div *ngIf="showResult && !enableEdit">
+    <div *ngIf="showResult && !enableEdit ">
      <hr>
         <div class="row my-2 fs-5  "  >
             <div class="col-lg-3 col-sm-3 ">
@@ -58,14 +58,14 @@
                    {{invoice.date|date:'short'}}
                 </div>
             </div>
-            <div class="col-lg-3 col-sm-3">
+            <div class="col-lg-3 mb-5 col-sm-3">
                 <label > التاريخ </label>
             </div>
         </div>
         <hr>
 
-        <div class="row my-3 fs-5 "  >
-           <table class="table table-striped table-inverse table-responsive">
+        <div class="row  fs-5 "  >
+           <table class="table my-3 table-striped table-inverse table-responsive">
             <thead class="thead-inverse">
                 <tr >
                     <th> العمليه </th>
@@ -93,14 +93,12 @@
             <button class="form-control mb-3 fs-5  form-control-lg btn btn-outline-warning" (click)="update()" >Update </button>
         </div>
         <hr>
-        <div >
+        <div class="my-5" >
             <div class="row myt-5 fs-5 "  >
-               
                 <div class="col-lg-8"></div>
                 <div class="col-lg-3">
                     {{invoice.totalPrice |currency: " EGP ":"symbol"}}
                     <label > :اجمالي الفاتوره</label>
-                    <!-- <input class="form-control form-control-lg " type="text"  [(ngModel)]="invoice.totalPrice" > -->
                 </div>
                 
             </div>
@@ -109,7 +107,6 @@
                 <div class="col-lg-3">
                     {{invoice.itemsCount}}
                     <label >:   عدد الاصناف </label>
-                    <!-- <input class="form-control form-control-lg " type="text"  [(ngModel)]="invoice.itemsCount" > -->
                 </div>
             </div>
         </div>
@@ -131,7 +128,7 @@
             <div class="row my-2 fs-5 form-group">
                 <div class="col-lg-6 col-sm-1"></div>
                 <div class="col-lg-3 col-sm-5">
-                    <input id="price"  class="form-control form-control-lg " [pattern]="IdPattern"  type="text" [(ngModel)]="item.price" placeholder="Enter price" >
+                    <input id="price"  class="form-control form-control-lg " [pattern]="IsNumberPattern"  type="text" [(ngModel)]="item.price" placeholder="Enter price" >
                 </div>
                 <div class="col-lg-3 col-sm-5">
                     <label for="price"> سعر القطعه  </label>
@@ -143,19 +140,22 @@
                 <div class="col-lg-6 col-sm-1"></div>
                 <div class="col-lg-3 col-sm-5">
                     <input   class="form-control form-control-lg " id="quantity" 
-                            [ngModelOptions]="{standalone: true}" [pattern]="IdPattern"  
+                            [ngModelOptions]="{standalone: true}" [pattern]="IsNumberPattern"  
                             type="text" [(ngModel)]="item.quantity" placeholder="Enter quantity " >
                 </div>
                 <div class="col-lg-3 col-sm-5">
                     <label for="quantity"> الكميه </label>
                 </div>
             </div>  
+            <div *ngIf="ErrorDuringUpdate" role="alert" class="alert alert-danger fs-5 my-2" style="text-align: left">
+                Either price or quantity is invalid !
+            </div>
             <button class=" mx-2 mb-3 fs-5  form-control-lg btn btn-outline-secondary" (click)="Back()" >Back </button>
             <button class=" mx-2 mb-3 fs-5  form-control-lg btn btn-outline-warning" (click)="saveUpdate(item)" >Update </button>
             
             
         </div>
-        <div *ngIf="showError2" role="alert" class="alert alert-danger fs-5 my-2" style="text-align: left">
+        <div *ngIf="showError2" role="alert" class="alert alert-danger fs-5 my-2 mb-5" style="text-align: left">
             {{errorMessage2}}
         </div>
 </div>
